--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>SSRF</h1>
-    <script>alert(document.cookie)</script>
+    <script>alert(1)</script>
   </body>
 </html>
